# vulkanProj

./: .gitignore  .gitmodules  README.md  setup.sh
proj/include/: globalDefs.h
proj/lib/include/: GLMDefs.h  GlfwInterface.h  STBDefs.h  VKBDefs.h  VKRenderData.h  VkEngine.h  VkRender.h  YourMom.h
proj/lib/src/: CMakeLists.txt  GlfwInterface.cpp  VkEngine.cpp  VkRender.cpp  YourMom.cpp  build.sh
proj/src/: CMakeLists.txt  build.sh  main.cpp  triangle.cpp
proj/src/assets/: arena_test.aseprite  magic_man_256.aseprite  magic_man_32.aseprite  zomboi_128.aseprite  zomboi_256-Sheet.aseprite  zomboi_256.aseprite  zomboi_sword_256.aseprite
proj/src/assets/ehhh/: knitht_test.aseprite  magic_man_128.aseprite
proj/src/shaders/: build.sh  rootBuild.sh  vert.glsl
